# raymond

./: BRDF.cpp  ColRGB.cpp  Material.cpp  README.md  Ray.cpp  Scene.cpp  SceneLight.cpp  SceneObject.cpp  Timer.cpp  Vector3.cpp  Viewport.cpp  main.cpp  meson.build
include/: BRDF.h  BSDF.h  ColRGB.h  Material.h  Ray.h  Scene.h  SceneLight.h  SceneObject.h  Timer.h  Utility.h  Vector3.h  Viewport.h
scenefiles/: SceneFile.scene
subprojects/EasyBMP/: meson.build
subprojects/EasyBMP/include/: EasyBMP.h
subprojects/sRGB/: meson.build
